# DaktLib-Decrypt

./: AGENT.md  ARCHITECTURE.md  CMakeLists.txt  README.md  TODO.md
.cache/clangd/index/: AESStub.cpp.A9C727668836CC66.idx  AESStub.hpp.8C55C1B98CFEDBF1.idx  Builtins.cpp.70ED5D8505828C0D.idx  Builtins.hpp.972297FC2C959D61.idx  CRC32.cpp.4052DA01EC66CFE8.idx  CRC32.hpp.4E258B1038792A3E.idx  Chunk.cpp.1AF1FF4744DA1077.idx  Chunk.hpp.A6CB85F3782259E7.idx  ChunkDetector.cpp.198076DDEC73ED1F.idx  ChunkDetector.hpp.936E81D90BAF6DFB.idx  ChunkRegistry.cpp.F014BFA813BAAA2D.idx  ChunkRegistry.hpp.DE58F39AACC0A6FA.idx  Compression.cpp.E7438505D3338627.idx  Compression.hpp.113FA9C9BBF254C1.idx  CompressionRegistry.cpp.C34C0185DF287B4B.idx  CompressionRegistry.hpp.6CABB098B1218162.idx  Context.cpp.3BD200A612DE53C3.idx  Context.hpp.E046DDA63C698BC1.idx  Crypto.cpp.61B2CA3972169BA3.idx  Crypto.hpp.7A2F53DA9AE30542.idx  CryptoRegistry.cpp.56A9AC6B6BA8C592.idx  CryptoRegistry.hpp.71FE652B42B5277E.idx  FileInput.cpp.FCA465BBF50C6ACF.idx  FileInput.hpp.4F7EFDAFCC8CCB45.idx  (+26 more)
src/: Builtins.cpp
src/api/: c_api.cpp
src/chunk/: Chunk.cpp
src/compression/: Compression.cpp  Lz4Lite.cpp  None.cpp  XMemStub.cpp
src/core/: Context.cpp  Inspector.cpp
src/crypto/: AESStub.cpp  Crypto.cpp  RC4Lite.cpp  XorSimple.cpp
src/detection/: ChunkDetector.cpp  MagicDetector.cpp
src/hash/: CRC32.cpp  Hashcode.cpp
src/io/: FileInput.cpp  Input.cpp  MemoryInput.cpp
src/registry/: ChunkRegistry.cpp  CompressionRegistry.cpp  CryptoRegistry.cpp  MagicRegistry.cpp
src/results/: Results.cpp
(+26 files in other folders)
